-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-valhalla
-
Component/s: hotspot
Only reproduces on AVX-512 VLBW capable machines (for example, Intel(R) Xeon(R) Gold 6354).
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (codeBuffer.cpp:972), pid=3048, tid=3123
# guarantee(sect->end() <= tend) failed: sanity
Stack: [0x00007f6cd95f5000,0x00007f6cd96f6000], sp=0x00007f6cd96f2320, free space=1012k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x59b1ec] CodeBuffer::verify_section_allocation()+0x36c
V [libjvm.so+0x59b38f] CodeBuffer::~CodeBuffer()+0xf
V [libjvm.so+0xe2ee5f] ProgrammableUpcallHandler::generate_optimized_upcall_stub(_jobject*, Method*, _jobject*, _jobject*)+0x234f
V [libjvm.so+0xe2b393] PUH_AllocateOptimizedUpcallStub+0x263
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (codeBuffer.cpp:972), pid=3048, tid=3123
# guarantee(sect->end() <= tend) failed: sanity
Stack: [0x00007f6cd95f5000,0x00007f6cd96f6000], sp=0x00007f6cd96f2320, free space=1012k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x59b1ec] CodeBuffer::verify_section_allocation()+0x36c
V [libjvm.so+0x59b38f] CodeBuffer::~CodeBuffer()+0xf
V [libjvm.so+0xe2ee5f] ProgrammableUpcallHandler::generate_optimized_upcall_stub(_jobject*, Method*, _jobject*, _jobject*)+0x234f
V [libjvm.so+0xe2b393] PUH_AllocateOptimizedUpcallStub+0x263
- relates to
-
JDK-8271370 [lworld] Avoid saving all registers before slow call in G1 barrier
-
- Closed
-