8271324: [lworld] java/foreign/* tests fail with "guarantee(sect->end() <= tend) failed: sanity"